--- a/phylo.html
+++ b/phylo.html
@@ -58,7 +58,7 @@
 									<section id="content">
 										<a class="image fit"><img src="images/Phylo/Hiding2.jpg" alt="" /></a>
 										<h3>Resolving the Tree of Life</h3>
-										<p>Phylogenetic trees are an integral component of comparative analyses that span topics ranging from the transmission of SARS-CoV-2 to human cancer biology to the factors that have shaped patterns of uneven species richness across the planet. Understanding the phylogeny of major groups of organisms has attracted the attention of evolutionary biologists since Charles Darwin drafted his famous “I think” diagram in 1837 (Barrett et al. 1987). However, it took more than 100 years for Darwin’s abstract concept of the tree of life to develop into an explicit, data-driven approach to phylogeny reconstruction.</p>
+										<p>Phylogenetic trees are an integral component of comparative analyses that span topics ranging from the transmission of SARS-CoV-2 to human cancer biology to the factors that have shaped patterns of uneven species richness across the planet. Understanding the phylogeny of major groups of organisms has attracted the attention of evolutionary biologists since Charles Darwin drafted his famous “I think” diagram in 1837. However, it took more than 100 years for Darwin’s abstract concept of the tree of life to develop into an explicit, data-driven approach to phylogeny reconstruction.</p>
 										<p>The early twenty-first century represents a phylogenetic renaissance. Over the past 20 years, hundreds of researchers have contributed resolved molecular phylogenies at varying time scales across the diversity of life. We continue to this effort to resolve all branches of the Tree of Life thereby provide a comparative framework for biologists. However, there are numerous pitfalls along the way, and we also develop computational means to avoid these</p>
 										<a class="image fit"><img src="images/Phylo/rattlesnake2.jpg" alt="" /></a>
 										<h3>Avoiding Pitfalls</h3>
@@ -84,7 +84,7 @@
 									<section id="sidebar">
 										<section>
 											<h3>Dataset Assembly and Missing Data</h3>
-											<p>The amount of freely available sequence data has become staggering and has tremendous promise for science. However, how to effectively harness this resource is not trivial. Large sequence datasets can be messy, and we often need to aggregate data from multiple sources. Moreover, high levels of missing data can impact our analyses. Extracting the data we need from within this tangled sea of information requires bioinformatic tools </p> 
+											<p>The enormous amount of freely available sequence data that continues to accumulate has tremendous promise for science. However, how to effectively harness this resource is not trivial. Large sequence datasets can be messy, and we often need to aggregate data from multiple sources. Moreover, high levels of missing data can impact our analyses. Extracting the data we need from within this tangled sea of information requires bioinformatic tools </p> 
 											<a href="#" class="image fit"><img src="images/Phylo/Maine.jpg" alt="" /></a>
 											<p> To aid in this effort, we continue to develop <a href="">TOAST</a>, an R package that enables extraction of thousands of single copy orthologs for any taxonomic group using any combination of online or local data while also tracking missing data patterns. Building upon functions for assessing thresholds of acceptable missing data allows for custom data set creation, that work in concert with numerous utility functions that produce outputs directly for phylogenetic software such as BEAST or IQTREE. Our goal for TOAST is to provide readily accessible tools that can harvest any set of loci for any set of organisms with only a minimal knowledge of R required by end-users. This goal is in line with with our vision of empowering anyone to utilize public genomic scale datasets in their research</p>
 											<footer>
@@ -96,9 +96,9 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+											<a href="#" class="image fit"><img src="images/Phylo/GreenMoray.jpg" alt="" /></a>
+											<h3>The Evolutionary Relationships of Ray-finned fishes</h3>
+											<p>With over 30,000 species, ray-finned fishes comprise one out of every two vertebrates. While it is clear that distinct fishes such as pufferfishes, deep-sea anglerfishes, or seahorses form natural groups, the larger tree that unites these groups has eluded resolution until very recently</p><p> Dr. Dornburg worked with Dr. Thomas Near at Yale University to recently publish a review of the efforts to resolve ray-finned fish phylogeny. In many cases, the new ray- finned fish phylogeny radically departs from classical expectations based on morphology. Our review features scientific advances empowered by a broader understanding of ray-finned fish evolutionary history including implications for topics that span from the genetics of human health to reconsidering the concept of living fossils </p><p> We also discuss conceptual challenges that involve reconciling taxonomic classification with phylogenetic relationships and propose an alternate higher-level classification for Percomorpha, one of the most species-rich clades of fishes. Our review highlights remaining areas of phylogenetic uncertainty and opportunities for comparative investigations empowered by this new phylogenetic perspective on ray-finned fishes</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Learn More</a></li>
