--- a/phylo.html
+++ b/phylo.html
@@ -101,7 +101,7 @@
 											<p>With over 30,000 species, ray-finned fishes comprise one out of every two vertebrates. While it is clear that distinct fishes such as pufferfishes, deep-sea anglerfishes, or seahorses form natural groups, the larger tree that unites these groups has eluded resolution until very recently</p><p> Dr. Dornburg worked with Dr. Thomas Near at Yale University to recently publish a review of the efforts to resolve ray-finned fish phylogeny. In many cases, the new ray- finned fish phylogeny radically departs from classical expectations based on morphology. Our review features scientific advances empowered by a broader understanding of ray-finned fish evolutionary history including implications for topics that span from the genetics of human health to reconsidering the concept of living fossils </p><p> We also discuss conceptual challenges that involve reconciling taxonomic classification with phylogenetic relationships and propose an alternate higher-level classification for Percomorpha, one of the most species-rich clades of fishes. Our review highlights remaining areas of phylogenetic uncertainty and opportunities for comparative investigations empowered by this new phylogenetic perspective on ray-finned fishes</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="#" class="button">Read the paper</a></li>
 												</ul>
 											</footer>
 										</section>
