--- a/publications.html
+++ b/publications.html
@@ -232,9 +232,21 @@
 											<li>Dornburg A., Colosi J.G., Maser C., Reese A.T., Watkins-Colwell G.J. A survey of the Yale Peabody Museum collection of Egyptian mammals collected during the construction of the Aswan high dam: with an emphasis on material from the Yale University prehistoric expedition to Nubia (YUPEN) 1962-1965. Peabody Bulletin of Natural History 52:255-272.<b><a href="#"> PDF</a></b></li>
 											<li>Dornburg A., Sidlauskas B., Sorenson L., Santini F., Near T.J., Alfaro, M.E. The influence of an innovative locomotor strategy on the phenotypic diversification of triggerfishes (Family: Balistidae). Evolution 65:1912–1926.<b><a href="#"> PDF</a></b></li>
 											<li>Dornburg A., Warren D.L., Iglesias T.L., Brandley M.C. Natural history observations of the ichthyological and herpetological fauna on the Island of Curaçao, Netherlands Antilles. Peabody Bulletin of Natural History 52:181–186.<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg A., Beaulieu J.M., Oliver J.C., Near T.J. Integrating fossil preservation biases in the selection of calibrations for molecular divergence time estimation. Systematic Biology 60: 519-527. pdf
+											<li>Dornburg A., Beaulieu J.M., Oliver J.C., Near T.J. Integrating fossil preservation biases in the selection of calibrations for molecular divergence time estimation. Systematic Biology 60: 519-527.<b><a href="#"> PDF</a></b></li>
 										</ul>
-										<p>Under Construction</p>
+										<span class="image fit"><img src="images/Zamami_tidepools.jpg" height="300" alt="" /></span>
+										<ul>
+										<h3>2010</h3>
+											<li>Watkins-Colwell G.J., Dornburg A., Hawlena D., Moore J. The Amphibians and Reptiles of the Yale University Prehistoric Expedition to Nubia (YUPEN) 1962-1965. Bulletin of the Peabody Museum of Natural History (51):179-197.<b><a href="#"> PDF</a></b></li>
+											<li>Weaver R.E., Dornburg A. New and noteworthy country records of Amphibians and Reptiles from Southeastern Washington State. Herpetological Review. 41(1):115–116.<b><a href="#"> PDF</a></b></li>
+										</ul>
+										<ul>
+										<h3>2009</h3>
+											<li>Alfaro M. E., Santini F., Brock C., Alamillo H., Dornburg A., Rabosky D.L., Carnevale G., Harmon L.J. Nine exceptional radiations plus high turnover explain species diversity in jawed vertebrates. Proceedings of the National Academy Sciences (106):13410–13414.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A., Moore J., Watkins-Colwell G.J. Distribution of freshwater fishes in Connecticut based on museum voucher specimens. Bulletin of the Peabody Museum of Natural History (50):347-379.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A., Weaver R.E. First Report of Scavenging by the Northern Pacific Rattlesnake (Crotalus oreganus). Northwestern Naturalist (90) 55-57.<b><a href="#"> PDF</a></b></li>
+										</ul>
+											<p>Under Construction</p>
 
 
 
