--- a/macro.html
+++ b/macro.html
@@ -97,12 +97,14 @@
 										<section>
 											<a href="#" class="image fit"><img src="images/macro/macro4.jpg" alt="" /></a>
 											<h3>It's all about the timing</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+											<p>How a lineage will react to changing conditions is at the forefront of conversations in biodiversity science. Our efforts continue to chronicle the notothenioid adaptive radiation in an effort to understand how polar diversity persists through time. </p><p>Rather than evolving their unusual adaptations in the face of major environmental upheaval, we found that much of the genetic variation was already in place before the Antarctic cooled. This finding challenges how we consider adaptation versus standing genetic diversity to predict the response of modern populations to contemporary climate change.</p><p>Antarctic notothenioids were basically in the right place at the right time to capitalize on the transition to an icy Antarctic millions of years ago. However, their future is uncertain. As our team has stated before, notothenioids are of high ecological, economic and medical importance, however, many species can't tolerate warming of more than a few degrees. In an ironic twist of fate, forecasts of climate change now warn that this unique radiation of fishes could become decimated over the next century. It is up to us to prevent such a tragic loss</p>
+											<img class="image fit" src="images/macro/Antarctica.jpg" alt="">
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Read the paper</a></li>
 												</ul>
 											</footer>
+
 										</section>
 									</section>
 
