--- a/publications.html
+++ b/publications.html
@@ -234,12 +234,13 @@
 											<li>Dornburg A., Warren D.L., Iglesias T.L., Brandley M.C. Natural history observations of the ichthyological and herpetological fauna on the Island of Curaçao, Netherlands Antilles. Peabody Bulletin of Natural History 52:181–186.<b><a href="#"> PDF</a></b></li>
 											<li>Dornburg A., Beaulieu J.M., Oliver J.C., Near T.J. Integrating fossil preservation biases in the selection of calibrations for molecular divergence time estimation. Systematic Biology 60: 519-527.<b><a href="#"> PDF</a></b></li>
 										</ul>
-										<span class="image fit"><img src="images/Zamami_tidepools.jpg" height="300" alt="" /></span>
+										<span class="image fit"><img src="images/Zamami_tidepools_banner-01.png" height="300" alt="" /></span>
 										<ul>
 										<h3>2010</h3>
 											<li>Watkins-Colwell G.J., Dornburg A., Hawlena D., Moore J. The Amphibians and Reptiles of the Yale University Prehistoric Expedition to Nubia (YUPEN) 1962-1965. Bulletin of the Peabody Museum of Natural History (51):179-197.<b><a href="#"> PDF</a></b></li>
 											<li>Weaver R.E., Dornburg A. New and noteworthy country records of Amphibians and Reptiles from Southeastern Washington State. Herpetological Review. 41(1):115–116.<b><a href="#"> PDF</a></b></li>
 										</ul>
+										<span class="image fit"><img src="images/marsh_banner-02.png" height="300" alt="" /></span>
 										<ul>
 										<h3>2009</h3>
 											<li>Alfaro M. E., Santini F., Brock C., Alamillo H., Dornburg A., Rabosky D.L., Carnevale G., Harmon L.J. Nine exceptional radiations plus high turnover explain species diversity in jawed vertebrates. Proceedings of the National Academy Sciences (106):13410–13414.<b><a href="#"> PDF</a></b></li>
