--- a/publications.html
+++ b/publications.html
@@ -225,7 +225,7 @@
 											<li>Dornburg, A., Moore, J.A., Webster, R., Warren, D.L., Brandley, M.C., Iglesias, T.L., Wainwright, P.C., and T.J. Near. Molecular phylogenetics of squirrelfishes and soldierfishes (Teleostei:Beryciformes: Holocentridae): reconciling more than 100 years of taxonomic confusion. Molecular Phylogenetics and Evolution 65: 727–738 <b><a href="#"> PDF</a></b></li>
 											<li>Near,T.J., Dornburg, A., Kuhn, K.L., Eastman, J.T., Pennington, J.N., Patarnello, T., Zane, L., Fernandez, D.A., Jones, C.D. Ancient climate change, antifreeze, and the evolutionary diversification of Antarctic fishes. Proceedings of the National Academy Sciences 109:3434–3439 <b><a href="#"> PDF</a></b></li>
 										</ul>
-										<span class="image fit"><img src="images/marsh.jpg" height="300" alt="" /></span>
+										<span class="image fit"><img src="images/dock_banner-03.png" height="300" alt="" /></span>
 										<h3>2011</h3>
 										<ul>
 											<li>Dornburg A., Brandley M.C., McGowen M., Near T.J. Rate Heterogeneity, Uncorrelated Relaxed-Clock Models, and Patterns of Molecular Evolution in Cetaceans. Molecular Biology and Evolution 29: 721-736.<b><a href="#"> PDF</a></b></li>
