--- a/alex.html
+++ b/alex.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>EvIL- Alex Dornburg</title>
+		<title>EvIL- Dr Dornburg</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,13 +48,15 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Alex Dornburg</h2>
-							<i> Principal Investigator</i>
+							<h2>Dr Alex Dornburg</h2>
+							<p><i>Principal Investigator</i></p>
 						</header>
+						
 
-						<!-- Content -->
-							<section id="content">
-								<p><span class="image right">
+								<!-- Content -->
+								<div class="div1"> 
+									<section id="content">
+										<span class="image right">
 									<img src="images/people/AlexAlt.jpg" alt="" /></span>
 									In my lab group, we aim to develop a better understanding of the general principles
 									that have given rise to the diversity of living vertebrates and enabled their persistence. This
@@ -73,19 +75,27 @@
 									this understanding can be applied to facilitate more effective stewardship of our planet, inform public
 									 health decision making, and establish a foundation for predicting the association of gene clusters with
 									 human health phenotypes.<br>
-									 <br>
-									 <a href="http://carolinafishes.github.io/images/Dornburg_CV.pdf">C.V.</a><br>
+									</section>
+
+
+							</div>
+							<hr />
+							<div class="div2"> 
+									<section id="links">
+										<a href="http://carolinafishes.github.io/images/Dornburg_CV.pdf">C.V.</a><br>
 									 <a href='https://www.researchgate.net/profile/Alex_Dornburg'>Research Gate</a><br>
 									 <a href='https://scholar.google.com/citations?user=VgPd6sMAAAAJ&hl=en'>Google Scholar</a><br></p>
-									<br>
+									</section>
 
 
+							</div>
+							<hr />
+									<div class="div3"> 
+									<section id="contact">
 									<h3>Contact</h3>
 									<b>Office:</b> Bioinformatics 357 <br>
 									<b>Email:</b> adornbur AT uncc.edu <br>
 									<br>
-									<br>
-
 									<h3>Education</h3>
 										<ul>
 											<li><b>2008—2014</b> Ph.D. Ecology and Evolutionary Biology, Yale University,
@@ -94,8 +104,43 @@
 													New Haven, CT.</li>
 											<li><b>2005—2008</b> B.S. Zoology, Washington State University, Pullman, WA.</li>
 										</ul>
-										<br>
-
-									<h3>Teaching</h3>
+									<h3>Courses</h3>
+									<ul>
 									<li><b>BINF 3121</b> Statistics for Bioinformatics </li>
+									</ul>
+									</section>
+
+
+							</div>
+							<hr />
+
+							</div>
+						</div>
+					</div>
+				</div>
+
+			<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Evolutionary Informatics Lab. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</footer>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
