--- a/macro.html
+++ b/macro.html
@@ -66,15 +66,15 @@
 										<p> Unlike other marine environments, over 90% of the fish biomass of the Southern Ocean derives from a single clade: notothenioids. This clade represents a primary link between lower level and higher level consumers such as whales, seals, and penguins in the Antarctic food web, and one of the only examples of adaptive radiation in marine fishes.</p><p> The success of notothenioids has been attributed to their ability to thrive in subzero waters through the use of anti-freeze proteins. While long heralded as a stunning example of a key innovation that drives lineage diversification, our work on these fishes has demonstrated this to be far from the full story.</p> Instead, the diversification of notothenioids appears to have been highly influenced by more geologically recent warming events. As portions of the Southern Ocean are among the most rapidly warming regions on the planet, our work strives to provide explicit linkages between changes in ice movement and the evolutionary dynamics that underlie the generation of nototheniod biodiversity. </p>
 										<span class="image fit"><img src="images/macro/macro1.jpg" alt="View of the Antarctic Coast" /></span>
 										<h3>Life on Coral Reefs</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<p>If you have ever observed a tropical coral reef, you know how spectacular these ecosystems are. Tropical coral reefs are hotspots of marine biodiversity, and have been fundamental in shaping the evolutionary history of the fishes that reside on them. However, what you may not know is that these biodiversity hotspots have not always been where they are today. For example, reefs of the indo-pacific are geologically young. Prior to their origin, coral reef biodiversity hotspots have 'hopped' around our planet </p><p> Our group is very interested in reconstructing the evolutionary history of fishes and how they responded to these spatial and temporal shifts in coral reef distributions. Using time calibrated phylogenies that include fossil species, we are now investigating the impact of hopping hotspots on reef fish speciation and extinction patterns. With modern coral reefs under higher extinction risks than ever in human history, this understanding forms a critical foundation for forecasting the future of coral reef fishes.</p>
 										<span class="image fit"><img src="images/macro/macro2.jpg" alt="A flounder" /></span>
 										<h3>Current Projects</h3>
 										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
+											<li>The adaptive radiation of Antarctic fishes</li>
+											<li>The evolution of nocturnality in reef fishes</li>
+											<li>Macroevolutionary dynamics across life stages</li>
+											<li>The rise of coral reef fishes</li>
+											<li>The diversification of fish phenotypes</li>
 										</ul>
 									</section>
 
@@ -87,7 +87,7 @@
 											<h3>Don't forget the kids</h3>
 											<p>Across the Tree of Life, most studies of phenotypic disparity and diversification have been restricted to adult organisms. However, many lineages have distinct ontogenetic phases that do not reflect the same traits as their adult forms. </p><p> Non-adult disparity patterns are particularly important to consider for coastal ray-finned fishes, which often have juvenile phases with distinct phenotypes. A new initiative in our lab is to integrate macroevolutionary work across life stages, thereby getting a more complete picture of what it takes for species to persist over time. </p> <p> We piloted this initiative in a recent preprint on triggerfishes, check it out! </p>
 											<footer>
-												<a href="https://www.biorxiv.org/content/10.1101/2022.01.11.475856v1" class="image fit"><img src="images/coral.jpg" alt="" /></a>
+												<a href="https://www.biorxiv.org/content/10.1101/2022.01.11.475856v1" class="image fit"><img src="images/macro/macro4.jpg" alt="" /></a>
 												<ul class="actions">
 													<li><a href="https://www.biorxiv.org/content/10.1101/2022.01.11.475856v1" class="button">Read the paper</a></li>
 												</ul>
@@ -95,10 +95,10 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/macro/macro4.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/macro/Antarctica.jpg" alt="" /></a>
 											<h3>It's all about the timing</h3>
 											<p>How a lineage will react to changing conditions is at the forefront of conversations in biodiversity science. Our efforts continue to chronicle the notothenioid adaptive radiation in an effort to understand how polar diversity persists through time. </p><p>Rather than evolving their unusual adaptations in the face of major environmental upheaval, we found that much of the genetic variation was already in place before the Antarctic cooled. This finding challenges how we consider adaptation versus standing genetic diversity to predict the response of modern populations to contemporary climate change.</p><p>Antarctic notothenioids were basically in the right place at the right time to capitalize on the transition to an icy Antarctic millions of years ago. However, their future is uncertain. As our team has stated before, notothenioids are of high ecological, economic and medical importance, however, many species can't tolerate warming of more than a few degrees. In an ironic twist of fate, forecasts of climate change now warn that this unique radiation of fishes could become decimated over the next century. It is up to us to prevent such a tragic loss</p>
-											<img class="image fit" src="images/macro/Antarctica.jpg" alt="">
+											
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Read the paper</a></li>
