--- a/current.html
+++ b/current.html
@@ -64,8 +64,9 @@
 										of marine biodiversity. I ask how morphology, ecology, or presence of specific genes can influence the evolution of fishes across space
 										and time. My thesis research uses an interdisciplinary approach to explore how marine fishes respond to extreme habitat transitions at
 										inter-individual and macroevolutionary scales. Through phylogenomics, models and comparative methods, I ask how environmental changes
-										happening today can impact the fish diversity of tomorrow.
-										<a href='https://www.researchgate.net/profile/Katerina_Zapfe'> Researchgate </a>
+										happening today can impact the fish diversity of tomorrow.<br>
+										<a href='https://www.researchgate.net/profile/Katerina_Zapfe'> Researchgate </a><br>
+										<a href='https://scholar.google.com/citations?hl=en&user=jOjgvw8AAAAJ'> Google scholar </a>
 								</div>
 								<hr />
 								<div class="div2">
@@ -142,7 +143,8 @@
 										alt="" /></a>
 									<b>April Lamb</b><br>
 									<i>Research Technician</i><br>
-										I'm April, a Research Technician in the Dornburg Lab. Prior to this position, I received my Masters degree in Biology, Ecology and Evolution and a professional certificate in Geospatial Information Systems (GIS) from North Carolina State University. I am also a 2017 National Science Foundation Graduate Research Fellow and hold a Bachelor's degree in Zoology from NC State. Broadly, I am interested in better understanding the bases of ecosystem resiliency (i.e. what factors contribute to an ecosystem's ability to recover from perturbations) and applying this knowledge to inform science-based policy and management decisions. I am especially interested in systems that are experiencing high levels of anthropogenically-driven change.
+										I'm April, a Research Technician in the Dornburg Lab. Prior to this position, I received my Masters degree in Biology, Ecology and Evolution and a professional certificate in Geospatial Information Systems (GIS) from North Carolina State University. I am also a 2017 National Science Foundation Graduate Research Fellow and hold a Bachelor's degree in Zoology from NC State. Broadly, I am interested in better understanding the bases of ecosystem resiliency (i.e. what factors contribute to an ecosystem's ability to recover from perturbations) and applying this knowledge to inform science-based policy and management decisions. I am especially interested in systems that are experiencing high levels of anthropogenically-driven change.<br>
+										<a href='https://scholar.google.com/citations?hl=en&user=-JnzNdcAAAAJ'> Google scholar </a>
 								</div>
 								<hr />
 								<div class="div9"> 
