--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Google scholar</h3>
+									<a href="https://scholar.google.com/citations?user=VgPd6sMAAAAJ&hl=en" class="icon solid alt major fa-chart-area"></a>
+									<h3><a href="https://scholar.google.com/citations?user=VgPd6sMAAAAJ&hl=en">Google scholar</a></h3>
 									<p>Follow our work and see where it intersects with the work of others</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
