--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 									<p>Links to writing tips and guides</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
-									<h3>Members only</h3>
+									<a href="https://evil49.github.io/meetings.html" class="icon solid alt major fa-lock"></a>
+									<h3><a href="https://evil49.github.io/meetings.html">Members only</a></h3>
 									<p>Link to lab meeting schedule for lab members</p>
 								</section>
 							</div>
