--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 									<p>Summaries of our latest papers along with links to pdfs or tutorials</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://evil49.github.io/"  class="icon solid alt major fa-flask"></a>
-									<h3><a href="https://evil49.github.io/"><b>Lab protocols</b></a></h3>
+									<a href="https://evil49.github.io/" class="icon solid alt major fa-flask"></a>
+									<h3><a href="https://evil49.github.io/">Lab protocols</a></h3>
 									<p>This is mostly for lab members and links to lab protocols and tutorials</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
