--- a/teamOverview.html
+++ b/teamOverview.html
@@ -55,7 +55,7 @@
 							<section id="content">
 								<p><a href="current.html" class="image fit"><img src="images/people/alex_lab_team.jpg" alt="" ></a>
 								
-								<span class="custom_bold"><br>Hi, I'm Dr. Alex Dornburg and welcome to my lab <br><br> The evolutionary informatics lab is home to a great group of students that I feel humbled to work with on a daily basis, as well as a virtual hub for students who have transitioned to the next stage of their careers <br><br>Check out the links below to learn more about me, current students, or our alumni</span>
+								<span class="custom_bold"><br>Hi, I'm Dr. Alex Dornburg and I would like to welcome you to my lab <br><br> The evolutionary informatics lab is home to a great group of students that I feel humbled to work with on a daily basis. It is also a virtual hub for students who have transitioned to the next stage of their careers, and a meeting point for other collaboratoring scientists we are fortunate to work with <br><br>Check out the links below to learn more about me, current students, or our alumni</span>
 								<br>
 								<header class="major">
 								</header>
