--- a/alex.html
+++ b/alex.html
@@ -58,23 +58,17 @@
 									<section id="content">
 										<span class="image right">
 									<img src="images/people/AlexAlt.jpg" alt="" /></span>
-									In my lab group, we aim to develop a better understanding of the general principles
-									that have given rise to the diversity of living vertebrates and enabled their persistence. This
-									knowledge not only allows us to gain a better understanding of the evolution of our own genomes,
-									but also provides critical historical context for emergent challenges to both human health and conservation.
-									We are currently focusing on three core research topics:</p>
-										<p>
-										<li> The factors that shaped marine fish biodiversity; with an emphasis on the mechanisms and functional
-											consequences of gene family diversification in the innate immune system</li>
-										<li> Leveraging the power of phylogenomic comparative methods to better understand critical aspects of
-											SARS-CoV-1 and SARS-CoV-2 biology such as the durability of immunity following infections and the genetic
-											mechanisms that enable zoonosis</li>
-										<li> The development of theory and software to aid comparative phylogenomic research</li></p>
+									<p>The 21st century is fundamentally different from any other point in human history. We have achieved unprecedented technological advances and global connectivity. However, we are also faced with the emergence of new diseases that threaten our health and the loss of species and habitats that threatens our global economy </p><p>In my lab group, we integrate tools from genomics, bioinformatics, immunogenetics, and evolutionary biology to provide the basis for forecasting changes in biodiversity as well as unknown aspects of emergent diseases. This work empowers us to be better stewards of our planet and effectively respond to global threats to human health </p> 
 
-									<p>These topics work towards a goal of illuminating general rules of vertebrate evolution. In turn,
-									this understanding can be applied to facilitate more effective stewardship of our planet, inform public
-									 health decision making, and establish a foundation for predicting the association of gene clusters with
-									 human health phenotypes.<br>
+									<p>We are currently focusing on three core research topics:</p>
+										<p>
+										<li> Understanding the factors that shaped marine fish biodiversity; with an emphasis on the mechanisms and functional consequences of gene family diversification in the innate immune system</li>
+										<li> Leveraging the power of methods from evolutionary biology to better fill in gaps in our knowledge of SARS-CoV-2 and other viruses. We are particularly focused on the durability of immunity following natural infection and/or vaccination as well as the genetic mechanisms that enable zoonosis</li>
+										<li> We are continuing to resolve various branches of the Tree of Life. In addition, we are actively developing theory and software to empower robust and stable evolutionary estimates using phylogenomic data</li></p>
+
+									<p>By harnessing the power of comparative evolutionary methods, our evolutionary informatics approaches work towards two overarching goals of our group. First we aim to illuminate general rules of vertebrate evolution. Second, we aim to utilize evolutionary biology to learn from the history of pathogen evolution to be able to address unknowns in the face of emergent diseases. Collectively,
+									these goals empower us to be more effective stewards of our planet and also provide critical, quantitative context for public
+									 health decision making</p>
 									</section>
 
 
