--- a/publications.html
+++ b/publications.html
@@ -109,31 +109,31 @@
 												mabouia geckos and a native gecko competitor. <i>Ecology and Evolution</i>, 11(24), 18719–18732.
 												<b><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.8401">PDF</a></b></li>
 
- 											<li>Dornburg, A, Ota, T, Criscitiello, M F, Salinas, I, Sunyer, J O, Magadán, S, Boudinot, P, Xu, Z, Flajnik,
-											M F, Singer, A, Gambón-Deza, F, Hansen, J D, & Yoder, J A. From IgZ to IgT: A Call for a Common Nomenclature
+ 											<li>Dornburg A, Ota T, Criscitiello MF, Salinas I, Sunyer JO, Magadán S, Boudinot P, Xu Z, Flajnik
+											MF, Singer A, Gambón-Deza F, Hansen JD, & Yoder JA. From IgZ to IgT: A Call for a Common Nomenclature
 											 for Immunoglobulin Heavy Chain Genes of Ray-Finned Fish. <i>Zebrafish</i>, 18(6), 343–345.
 												<b><a href="#">PDF</a></b></li>
 
-											<li>Dornburg, A, Wcisel, D J, Zapfe, K, Ferraro, E, Roupe-Abrams, L, Thompson, A W, Braasch, I, Ota, T, & Yoder, J A. Holosteans contextualize the role of the teleost genome duplication in promoting the rise of evolutionary novelties
+											<li>Dornburg A, Wcisel DJ, Zapfe K, Ferraro E, Roupe-Abrams L, Thompson AW, Braasch I, Ota T, & Yoder JA. Holosteans contextualize the role of the teleost genome duplication in promoting the rise of evolutionary novelties
 												 in the ray-finned fish innate immune system.<i> Immunogenetics</i>, 73(6), 479–497.
 												 <b><a href="#">PDF</a></b></li>
 
-											<li> Dornburg, A, & Near, T J. The Emerging Phylogenetic Perspective on the Evolution of Actinopterygian Fishes. 
+											<li> Dornburg A, & Near TJ. The Emerging Phylogenetic Perspective on the Evolution of Actinopterygian Fishes. 
 												<i>Annual Review of Ecology, Evolution, and Systematics</i>.
 												<b><a href="#">PDF</a></b></li>
 
-											<li>Sigler, K Warren, D, Tracy,B, Forrestel, E, Hogue, G, Dornburg, A. Assessing bias in aggregated historical spatial data: A case study of North Carolina’s freshwater fishes. <i>Ecosphere</i>, 10.1002/ ecs2.3878, 12, 12,<b><a href="https://esajournals.onlinelibrary.wiley.com/doi/pdfdirect/10.1002/ecs2.3878"> PDF</a></b></li>
+											<li>Sigler K, Warren D, Tracy B, Forrestel E, Hogue G, Dornburg A. Assessing bias in aggregated historical spatial data: A case study of North Carolina’s freshwater fishes. <i>Ecosphere</i>, 10.1002/ ecs2.3878, 12, 12,<b><a href="https://esajournals.onlinelibrary.wiley.com/doi/pdfdirect/10.1002/ecs2.3878"> PDF</a></b></li>
 
-											<li>Warren, D L, Eytan, R I, Dornburg, A, Iglesias, T L, Brandley, M C, & Wainwright, P C. Reevaluating
+											<li>Warren DL, Eytan RI, Dornburg A, Iglesias TL, Brandley MC, & Wainwright PC. Reevaluating
 												 claims of ecological speciation in Halichoeres bivittatus. <i>Ecology and Evolution</i>, 11(16), 11449–11456.
 												 <b><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.7936">PDF</a></b></li>
 
-											<li>Warren, D L, Dornburg, A, Zapfe, K, & Iglesias, T L. The effects of climate change on Australia’s only
+											<li>Warren DL, Dornburg A, Zapfe K, & Iglesias TL. The effects of climate change on Australia’s only
 												endemic Pokémon: Measuring bias in species distribution models. <i>Methods in Ecology and Evolution </i>, 
 												12(6), 985–995.
 												<b><a href="https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.13591">PDF</a></b></li>
 
-											<li>Dornburg, A, Wang, Z, Wang, J, Mo, E S, López-Giráldez, F, & Townsend, J P. Comparative Genomics within and across
+											<li>Dornburg A, Wang Z, Wang J, Mo ES, López-Giráldez F, & Townsend JP. Comparative Genomics within and across
 												Bilaterians Illuminates the Evolutionary History of ALK and LTK Proto-Oncogene Origination and Diversification. <i>Genome Biology and
 												Evolution</i>, 13(1).
 												<b><a href="https://academic.oup.com/gbe/article/13/1/evaa228/5983394">PDF</a></b></li>
@@ -143,10 +143,10 @@
 
 										<h4>2020</h4>
 										<ul><span class="custom_bold">
-											<li>Daane, JM, Dornburg, A, Smits, P, MacGuigan, DJ, Hawkins, MB, Near, TJ, Detrich, HW, Harris, MP. Historical contingency shapes adaptive radiation in Antarctic fishes. <i>Nature Ecology and Evolution</i> 3: 1102—1109<b><a href="#"> PDF</a></b></li>
+											<li>Daane JM, Dornburg A, Smits P, MacGuigan DJ, Hawkins MB, Near TJ, Detrich HW Harris MP. Historical contingency shapes adaptive radiation in Antarctic fishes. <i>Nature Ecology and Evolution</i> 3: 1102—1109<b><a href="#"> PDF</a></b></li>
 											<li>Wcisel DJ, Howard JT, Yoder JA, Dornburg A. Transcriptome ortholog alignment sequence tools (TOAST) for phylogenomic dataset assembly. <i>BMC evolutionary biology.</i> Dec (20):1-0 <b><a href="#"> PDF</a></b></li>
 											<li>Parker E, Jones CD, Arana PM, Alegría NA, Sarralde R, Gallardo F, Phillips AJ, Williams BW, Dornburg A. Infestation dynamics between parasitic Antarctic fish leeches (Piscicolidae) and their crocodile icefish hosts (Channich- thyidae). <i>Polar Biology</i> 43: 665—77<b><a href="#"> PDF</a></b></li>
-											<li>Somarelli, JA, Gardner, H, Cannataro, V, Gunady, EF,Boddy, AM, Johnson, NA, Fisk, JN, Gaffney, SG, Chuang, JH, Li, S, Ciccarelli, FD, Panchenko, AR, Megquier, K, Kumar, S, Dornburg, A, DeGregori, J, Townsend, JP. Molecular biology and evolution of cancer: from discovery to action. <i>Molecular Biology and Evolution</i> 37: 320—326<b><a href="#"> PDF</a></b></li>
+											<li>Somarelli JA, Gardner H, Cannataro V, Gunady EF,Boddy AM, Johnson NA, Fisk JN, Gaffney SG, Chuang JH, Li S, Ciccarelli FD, Panchenko AR, Megquier K, Kumar S, Dornburg A, DeGregori J, Townsend JP. Molecular biology and evolution of cancer: from discovery to action. <i>Molecular Biology and Evolution</i> 37: 320—326<b><a href="#"> PDF</a></b></li>
 											</span>
 										</ul>
 										<span class="image fit"><img src="images/publicationsBanner1.jpg" height="300" alt="" /></span>
