--- a/publications.html
+++ b/publications.html
@@ -237,12 +237,15 @@
 										<span class="image fit"><img src="images/Zamami_tidepools_banner-01.png" height="300" alt="" /></span>
 										<ul>
 										<h3>2010–earlier</h3>
-											<li>2010. Watkins-Colwell G.J., Dornburg A., Hawlena D., Moore J. The Amphibians and Reptiles of the Yale University Prehistoric Expedition to Nubia (YUPEN) 1962-1965. Bulletin of the Peabody Museum of Natural History (51):179-197.<b><a href="#"> PDF</a></b></li>
-											<li>2010. Weaver R.E., Dornburg A. New and noteworthy country records of Amphibians and Reptiles from Southeastern Washington State. Herpetological Review. 41(1):115–116.<b><a href="#"> PDF</a></b></li>
-											<li>2009. Alfaro M. E., Santini F., Brock C., Alamillo H., Dornburg A., Rabosky D.L., Carnevale G., Harmon L.J. Nine exceptional radiations plus high turnover explain species diversity in jawed vertebrates. Proceedings of the National Academy Sciences (106):13410–13414.<b><a href="#"> PDF</a></b></li>
-											<li>2009. Dornburg A., Moore J., Watkins-Colwell G.J. Distribution of freshwater fishes in Connecticut based on museum voucher specimens. Bulletin of the Peabody Museum of Natural History (50):347-379.<b><a href="#"> PDF</a></b></li>
-											<li>2009. Dornburg A., Weaver R.E. First Report of Scavenging by the Northern Pacific Rattlesnake (Crotalus oreganus). Northwestern Naturalist (90) 55-57.<b><a href="#"> PDF</a></b></li>
+										<span class="custom_bold">
+											<li>2010. Watkins-Colwell GJ, Dornburg A, Hawlena D, Moore J. The Amphibians and Reptiles of the Yale University Prehistoric Expedition to Nubia (YUPEN) 1962-1965. <i>Bulletin of the Peabody Museum of Natural History</i> (51):179-197.<b><a href="#"> PDF</a></b></li>
+											<li>2010. Weaver RE & Dornburg A. New and noteworthy country records of Amphibians and Reptiles from Southeastern Washington State. <i>Herpetological Review</i>  41(1):115–116.<b><a href="#"> PDF</a></b></li>
+											<li>2009. Alfaro ME, Santini F, Brock C, Alamillo H, Dornburg A, Rabosky DL, Carnevale G, Harmon LJ. Nine exceptional radiations plus high turnover explain species diversity in jawed vertebrates. <i>Proceedings of the National Academy Sciences</i> (106):13410–13414.<b><a href="#"> PDF</a></b></li>
+											<li>2009. Dornburg A, Moore J, Watkins-Colwell GJ. Distribution of freshwater fishes in Connecticut based on museum voucher specimens. <i>Bulletin of the Peabody Museum of Natural History</i> (50):347-379.<b><a href="#"> PDF</a></b></li>
+											<li>2009. Dornburg A & Weaver RE. First Report of Scavenging by the Northern Pacific Rattlesnake (Crotalus oreganus). <i>Northwestern Naturalist</i>  (90) 55-57.<b><a href="#"> PDF</a></b></li>
+											<li>2008. Dornburg A, Santini F, Alfaro ME. The influence of model-averaging on clade posteriors: an example using the triggerfishes (Family: Balistidae). <i>Systematic Biology</i>  57(6):905–919 <a href=""> <en>pdf</en></a></li></span>
 										</ul>
+										<h3>Non peer-reviewed publications</h3>
 											<p>Rest Under Construction</p>
 
 
